--- a/mobile/src/main/res/layout/fragment_friend_list.xml
+++ b/mobile/src/main/res/layout/fragment_friend_list.xml
@@ -7,10 +7,16 @@
     android:layout_centerHorizontal="true"
     tools:context=".MainActivity$FriendListFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="hello"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView_friendList"
         android:layout_gravity="center_horizontal" />
+
 
 </LinearLayout>
