--- a/glass/src/main/res/layout/grid_eight_views.xml
+++ b/glass/src/main/res/layout/grid_eight_views.xml
@@ -20,11 +20,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -43,11 +45,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -65,11 +69,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -87,11 +93,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -121,11 +129,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -143,11 +153,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -165,11 +177,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -187,11 +201,13 @@
             android:weightSum="3">
 
             <ImageView
+                android:id="@+id/eight_image_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:src="@drawable/name_profile_thad"/>
             <TextView
+                android:id="@+id/eight_name_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
