scroll view adapter

--- a/glass/src/main/res/layout/face_card_main.xml
+++ b/glass/src/main/res/layout/face_card_main.xml
@@ -42,6 +42,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/one_note"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight=".5"
