--- a/glass/src/main/res/layout/grid_eight_views.xml
+++ b/glass/src/main/res/layout/grid_eight_views.xml
@@ -6,109 +6,110 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:weightSum="4"
+        android:layout_height="150dp"
+        android:weightSum="12"
         android:layout_weight="0.5">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_marginBottom="3dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_1"
+                android:id="@+id/eight_img_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
-
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
-            </LinearLayout>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_2"
+                android:id="@+id/eight_img_2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_3"
+                android:id="@+id/eight_imag_3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_4"
+                android:id="@+id/eight_imag_4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
-
 
 
     </LinearLayout>
@@ -116,106 +117,111 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:weightSum="4"
+        android:layout_height="150dp"
+        android:weightSum="12"
         android:layout_weight="0.5">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_5"
+                android:id="@+id/eight_imag_5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_6"
+                android:id="@+id/eight_imag_6"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_7"
+                android:id="@+id/eight_imag_7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
+            android:layout_margin="1dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="3"
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_image_8"
+                android:id="@+id/eight_imag_8"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:layout_weight="2"
-                android:src="@drawable/name_profile_thad"/>
+                android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Thad Starner"
-                android:textSize="15dp"
+                android:text="John Stasko"
+                android:textSize="12dp"
                 android:gravity="center"/>
 
         </LinearLayout>
+
 
 
     </LinearLayout>
