--- a/glass/src/main/res/layout/grid_eight_views.xml
+++ b/glass/src/main/res/layout/grid_eight_views.xml
@@ -20,7 +20,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_img_1"
+                android:id="@+id/eight_image_1"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -45,7 +45,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_img_2"
+                android:id="@+id/eight_image_2"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -70,7 +70,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_imag_3"
+                android:id="@+id/eight_image_3"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -95,7 +95,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_imag_4"
+                android:id="@+id/eight_image_4"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -131,7 +131,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_imag_5"
+                android:id="@+id/eight_image_5"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -156,7 +156,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_imag_6"
+                android:id="@+id/eight_image_6"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -181,7 +181,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_imag_7"
+                android:id="@+id/eight_image_7"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
@@ -206,7 +206,7 @@
             android:weightSum="3">
 
             <ImageView
-                android:id="@+id/eight_imag_8"
+                android:id="@+id/eight_image_8"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_weight="2"
