--- a/mobile/src/main/res/layout/fragment_main.xml
+++ b/mobile/src/main/res/layout/fragment_main.xml
@@ -55,6 +55,7 @@
 
     </LinearLayout>
 
+    <!--
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
@@ -88,6 +89,7 @@
             android:background="#000000" />
 
     </LinearLayout>
+    -->
 
     <LinearLayout
         android:orientation="vertical"
@@ -105,6 +107,100 @@
             android:textSize="20dp"
             android:layout_marginTop="20dp"
             android:layout_gravity="left" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.1"
+                    android:id="@+id/image_google_icon"
+                    android:src="@drawable/google"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/google_link"
+                    android:text="www.google.com"
+                    android:layout_marginLeft="10dp"/>
+                <!--CheckBox
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1"
+                    android:id="@+id/checkbox1"/-->
+            </LinearLayout>
+            <!--
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.1"
+                    android:id="@+id/facebook_icon"
+                    android:src="@drawable/facebook"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/facebook_link"
+                    android:text="www.facebook.com"
+                    android:layout_marginLeft="10dp"/>
+                <CheckBox
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1"
+                    android:id="@+id/checkbox2"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.1"
+                    android:id="@+id/linkedin"
+                    android:src="@drawable/linkedin"/>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/linkedin_link"
+                    android:text="www.linkedin.com"
+                    android:layout_marginLeft="10dp"/>
+                <CheckBox
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.1"
+                    android:id="@+id/checkbox3"/>
+            </LinearLayout>
+            -->
+
+
+        </LinearLayout>
+
         <!--<TextView-->
             <!--android:id="@+id/profile_phone"-->
             <!--android:layout_width="wrap_content"-->
@@ -114,28 +210,34 @@
             <!--android:textSize="10dp"-->
             <!--android:layout_marginTop="10dp"-->
             <!--android:layout_gravity="left" />-->
-        <TextView
-            android:id="@+id/profile_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="example@email.com"
-            android:layout_marginLeft="20dp"
-            android:textSize="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="left" />
-        <TextView
-            android:id="@+id/profile_website"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="example.com"
-            android:layout_marginLeft="20dp"
-            android:textSize="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="left" />
+        <!--<TextView-->
+            <!--android:id="@+id/profile_email"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="example@email.com"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:textSize="10dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_gravity="left" />-->
+        <!--<TextView-->
+            <!--android:id="@+id/profile_website"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="example.com"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:textSize="10dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:layout_gravity="left" />-->
 
 
 
     </LinearLayout>
+
+    <View
+        android:layout_marginTop="20dp"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="#999999" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -143,89 +245,76 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Settings"
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:layout_gravity="left" />
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
 
-            <ImageView
+            <ToggleButton
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_weight="0.1"
-                android:id="@+id/image_google_icon"
-                android:src="@drawable/google"/>
+                android:layout_weight="0.2"
+                android:text="New ToggleButton"
+                android:id="@+id/profile_toggle_update" />
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.8"
                 android:layout_gravity="center_vertical"
-                android:id="@+id/google_link"
-                android:text="www.google.com"
+                android:text="Update Glass"
                 android:layout_marginLeft="10dp"/>
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:id="@+id/checkbox1"/>
+
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
 
-            <ImageView
+            <ToggleButton
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_weight="0.1"
-                android:id="@+id/facebook_icon"
-                android:src="@drawable/facebook"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.8"
-                android:layout_gravity="center_vertical"
-                android:id="@+id/facebook_link"
-                android:text="www.facebook.com"
-                android:layout_marginLeft="10dp"/>
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:id="@+id/checkbox2"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+                android:layout_weight="0.2"
+                android:text="New ToggleButton"
+                android:id="@+id/profile_toggle_demo" />
 
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="0.1"
-                android:id="@+id/linkedin"
-                android:src="@drawable/linkedin"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.8"
                 android:layout_gravity="center_vertical"
-                android:id="@+id/linkedin_link"
-                android:text="www.linkedin.com"
+                android:text="Demo"
                 android:layout_marginLeft="10dp"/>
-            <CheckBox
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:id="@+id/checkbox3"/>
+
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/profile_device_detected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Last Detected"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="left" />
+
 
 
     </LinearLayout>
+
+
 
 </LinearLayout>
