--- a/glass/src/main/res/layout/grid_eight_views.xml
+++ b/glass/src/main/res/layout/grid_eight_views.xml
@@ -1,230 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:weightSum="12"
+        android:layout_height="0dp"
         android:layout_weight="0.5">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
-
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:layout_weight="0.25"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_1"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:layout_weight="0.25"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_2"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:layout_weight="0.25"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_3"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:layout_weight="0.25"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_4"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-
-
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:weightSum="12"
+        android:layout_height="0dp"
         android:layout_weight="0.5">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
+            android:layout_width="0dp"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
 
+
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_5"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_6"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_6"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_7"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_7"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:orientation="vertical"
-            android:layout_margin="1dp"
-            android:layout_marginBottom="0dp"
-            android:layout_weight="3"
-            android:weightSum="3">
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.25"
+            android:layout_height="match_parent"
+            android:padding="@dimen/eight_card_padding"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/eight_image_8"
                 android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_weight="2"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
                 android:src="@drawable/name_profile_john"/>
             <TextView
                 android:id="@+id/eight_name_8"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_height="0dp"
+                android:layout_weight="0.3"
                 android:text="John Stasko"
                 android:textSize="12dp"
                 android:gravity="center"/>
-
         </LinearLayout>
 
-
-
     </LinearLayout>
-
 
 </LinearLayout>
