--- a/glass/src/main/res/values/dimens.xml
+++ b/glass/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <!-- Default screen margins, per the Glass design guidelines. -->
     <dimen name="card_margin">40px</dimen>
+    <dimen name="eight_card_padding">10px</dimen>
 </resources>
